syntax = "proto3";
package login;

message LoginRequest{
  string user_name = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}

service Greeter {
  rpc Login (LoginRequest) returns (LoginResponse);
}